add asmjit/fadec/disarm licenses where needed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ derive_more = { version = "1.0.0", features = [
     "add",
 ] }
 
+capstone = "*"
+
 
 [target.'cfg(target_arch="riscv64")'.dependencies]
 wasmtime-jit-icache-coherence = { version = "26.0.1", optional = true }
